kubernetes/namespaces/first-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment 

spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx 

  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx 
        image: nginx:1.25
        ports:
            - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 128Mi
