kubernetes/namespaces/first-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx-test
  labels:
    app: nginx

spec:
  containers:
    - name: nginx
      image: nginx:1.25
      ports:
        - containerPort: 80
